spring data is not necessary
Signed-off-by: Masataka Mizukoshi <m.mizukoshi.wakuwaku@gmail.com>

--- a/res/configuration.json
+++ b/res/configuration.json
@@ -1,15 +1,15 @@
 {
 	"applicationname" : "core-metadata",
 	"consulprofilesactive" : "go",
-	"springdatamongodbusername" : "meta",
-	"springdatamongodbpassword" : "password",
-	"springdatamongodbdatabase" : "metadata",
-	"springdatamongodbhost" : "localhost",
-	"springdatamongodbport" : 27017,
-	"springdatamongodbconnectTimeout" : 120000,
-	"springdatamongodbsocketTimeout"	: 60000,
-	"springdatamongodbmaxWaitTime" : 120000,
-	"springdatamongodbsocketKeepAlive" : true,
+	"mongodbusername" : "meta",
+	"mongodbpassword" : "password",
+	"mongodbdatabase" : "metadata",
+	"mongodbhost" : "localhost",
+	"mongodbport" : 27017,
+	"mongodbconnectTimeout" : 120000,
+	"mongodbsocketTimeout"	: 60000,
+	"mongodbmaxWaitTime" : 120000,
+	"mongodbsocketKeepAlive" : true,
 	"readmaxlimit" : 100,
 	"serverport" : 48081,
 	"servertimeout" : 5000,
